Прочитал Возвращение в СССР #16

--- a/css/style.css
+++ b/css/style.css
@@ -741,5 +741,17 @@ a#a241:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 a#a242{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 0 0;}
 a#a242:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_14.jpg") 100px 0;}
 
-#a243{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_15.jpg") 0 0;}
+a#a243{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_15.jpg") 0 0;}
 a#a243:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_15.jpg") 100px 0;}
+
+a#a244{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_16.jpg") 0 0;}
+a#a244:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_16.jpg") 100px 0;}
+
+a#a245{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_17.jpg") 0 0;}
+a#a245:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_17.jpg") 100px 0;}
+
+a#a246{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_18.jpg") 0 0;}
+a#a246:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_18.jpg") 100px 0;}
+
+a#a247{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_19.jpg") 0 0;}
+a#a247:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_19.jpg") 100px 0;}
