Прочитал Возвращение в СССР #20

--- a/css/style.css
+++ b/css/style.css
@@ -755,3 +755,6 @@ a#a246:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a247{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_19.jpg") 0 0;}
 a#a247:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_19.jpg") 100px 0;}
+
+a#a248{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_20.jpg") 0 0;}
+a#a248:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_20.jpg") 100px 0;}
