--- a/css/style.css
+++ b/css/style.css
@@ -758,3 +758,6 @@ a#a247:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a248{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_20.jpg") 0 0;}
 a#a248:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_20.jpg") 100px 0;}
+
+a#a249{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_21.jpg") 0 0;}
+a#a249:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_21.jpg") 100px 0;}
