Прочитал Возвращение в СССР #22

--- a/css/style.css
+++ b/css/style.css
@@ -761,3 +761,6 @@ a#a248:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a249{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_21.jpg") 0 0;}
 a#a249:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_21.jpg") 100px 0;}
+
+a#a250{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_22.jpg") 0 0;}
+a#a250:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_22.jpg") 100px 0;}
