--- a/css/style.css
+++ b/css/style.css
@@ -764,3 +764,6 @@ a#a249:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a250{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_22.jpg") 0 0;}
 a#a250:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_22.jpg") 100px 0;}
+
+a#a251{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_23.jpg") 0 0;}
+a#a251:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_23.jpg") 100px 0;}
