Прочитал Возвращение в СССР #25

--- a/css/style.css
+++ b/css/style.css
@@ -779,3 +779,6 @@ a#a251:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a252{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_24.jpg") 0 0;}
 a#a252:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_24.jpg") 100px 0;}
+
+a#a253{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_25.jpg") 0 0;}
+a#a253:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_25.jpg") 100px 0;}
