Прочитал Возвращение в СССР #26

--- a/css/style.css
+++ b/css/style.css
@@ -782,3 +782,6 @@ a#a252:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a253{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_25.jpg") 0 0;}
 a#a253:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_25.jpg") 100px 0;}
+
+a#a254{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_26.jpg") 0 0;}
+a#a254:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_26.jpg") 100px 0;}
