--- a/css/style.css
+++ b/css/style.css
@@ -785,3 +785,6 @@ a#a253:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a254{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_26.jpg") 0 0;}
 a#a254:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_26.jpg") 100px 0;}
+
+a#a255{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_27.jpg") 0 0;}
+a#a255:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_27.jpg") 100px 0;}
