Прочитал Возвращение в СССР #28

--- a/css/style.css
+++ b/css/style.css
@@ -788,3 +788,6 @@ a#a254:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a255{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_27.jpg") 0 0;}
 a#a255:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_27.jpg") 100px 0;}
+
+a#a256{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_28.jpg") 0 0;}
+a#a256:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_28.jpg") 100px 0;}
