--- a/css/style.css
+++ b/css/style.css
@@ -791,3 +791,6 @@ a#a255:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a256{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_28.jpg") 0 0;}
 a#a256:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_28.jpg") 100px 0;}
+
+a#a257{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_29.jpg") 0 0;}
+a#a257:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_29.jpg") 100px 0;}
