--- a/css/style.css
+++ b/css/style.css
@@ -797,3 +797,6 @@ a#a257:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a258{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_30.jpg") 0 0;}
 a#a258:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_30.jpg") 100px 0;}
+
+a#a259{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_31.jpg") 0 0;}
+a#a259:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_31.jpg") 100px 0;}
