Прочитал Возвращение в СССР #32

--- a/css/style.css
+++ b/css/style.css
@@ -800,3 +800,6 @@ a#a258:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a259{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_31.jpg") 0 0;}
 a#a259:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_31.jpg") 100px 0;}
+
+a#a260{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_32.jpg") 0 0;}
+a#a260:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_32.jpg") 100px 0;}
