--- a/css/style.css
+++ b/css/style.css
@@ -803,3 +803,6 @@ a#a259:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a260{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_32.jpg") 0 0;}
 a#a260:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_32.jpg") 100px 0;}
+
+a#a261{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_33.jpg") 0 0;}
+a#a261:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_33.jpg") 100px 0;}
