Прочитал Возвращение в СССР #34

--- a/css/style.css
+++ b/css/style.css
@@ -806,3 +806,6 @@ a#a260:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a261{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_33.jpg") 0 0;}
 a#a261:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_33.jpg") 100px 0;}
+
+a#a262{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_34.jpg") 0 0;}
+a#a262:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_34.jpg") 100px 0;}
