Прочитал Возвращение в СССР #35

--- a/css/style.css
+++ b/css/style.css
@@ -809,3 +809,6 @@ a#a261:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a262{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_34.jpg") 0 0;}
 a#a262:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_34.jpg") 100px 0;}
+
+a#a263{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_35.jpg") 0 0;}
+a#a263:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_35.jpg") 100px 0;}
