--- a/css/style.css
+++ b/css/style.css
@@ -812,3 +812,6 @@ a#a262:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a263{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_35.jpg") 0 0;}
 a#a263:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_35.jpg") 100px 0;}
+
+a#a264{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_36.jpg") 0 0;}
+a#a264:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_36.jpg") 100px 0;}
