Прочитал Возвращение в СССР #37

--- a/css/style.css
+++ b/css/style.css
@@ -815,3 +815,6 @@ a#a263:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a264{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_36.jpg") 0 0;}
 a#a264:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_36.jpg") 100px 0;}
+
+a#a265{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_37.jpg") 0 0;}
+a#a265:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_37.jpg") 100px 0;}
