--- a/css/style.css
+++ b/css/style.css
@@ -818,3 +818,6 @@ a#a264:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a265{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_37.jpg") 0 0;}
 a#a265:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_37.jpg") 100px 0;}
+
+a#a266{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_38.jpg") 0 0;}
+a#a266:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_38.jpg") 100px 0;}
