Причитал Возвращение в СССР #39

--- a/css/style.css
+++ b/css/style.css
@@ -821,3 +821,6 @@ a#a265:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a266{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_38.jpg") 0 0;}
 a#a266:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_38.jpg") 100px 0;}
+
+a#a267{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_39.jpg") 0 0;}
+a#a267:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_39.jpg") 100px 0;}
