Прочитал Возвращение в СССР #40

--- a/css/style.css
+++ b/css/style.css
@@ -824,3 +824,6 @@ a#a266:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a267{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_39.jpg") 0 0;}
 a#a267:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_39.jpg") 100px 0;}
+
+a#a268{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_40.jpg") 0 0;}
+a#a268:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_40.jpg") 100px 0;}
