Прочитал Возвращение в СССР #41

--- a/css/style.css
+++ b/css/style.css
@@ -827,3 +827,6 @@ a#a267:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a268{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_40.jpg") 0 0;}
 a#a268:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_40.jpg") 100px 0;}
+
+a#a269{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_41.jpg") 0 0;}
+a#a269:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_41.jpg") 100px 0;}
