--- a/css/style.css
+++ b/css/style.css
@@ -830,3 +830,6 @@ a#a268:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a269{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_41.jpg") 0 0;}
 a#a269:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_41.jpg") 100px 0;}
+
+a#a270{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_42.jpg") 0 0;}
+a#a270:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_42.jpg") 100px 0;}
