--- a/css/style.css
+++ b/css/style.css
@@ -833,3 +833,6 @@ a#a269:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a270{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_42.jpg") 0 0;}
 a#a270:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_42.jpg") 100px 0;}
+
+a#a271{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_43.jpg") 0 0;}
+a#a271:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_43.jpg") 100px 0;}
