Прочитал Возвращение в СССР #44

--- a/css/style.css
+++ b/css/style.css
@@ -836,3 +836,6 @@ a#a270:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a271{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_43.jpg") 0 0;}
 a#a271:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_43.jpg") 100px 0;}
+
+a#a272{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_44.jpg") 0 0;}
+a#a272:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_44.jpg") 100px 0;}
