--- a/css/style.css
+++ b/css/style.css
@@ -842,3 +842,6 @@ a#a272:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a273{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_45.jpg") 0 0;}
 a#a273:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_45.jpg") 100px 0;}
+
+a#a274{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_46.jpg") 0 0;}
+a#a274:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_46.jpg") 100px 0;}
