--- a/css/style.css
+++ b/css/style.css
@@ -848,3 +848,6 @@ a#a274:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a275{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_47.jpg") 0 0;}
 a#a275:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_47.jpg") 100px 0;}
+
+a#a276{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_48.jpg") 0 0;}
+a#a276:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_48.jpg") 100px 0;}
