Прочитал Всё хреново

--- a/css/style.css
+++ b/css/style.css
@@ -851,3 +851,9 @@ a#a275:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a276{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_48.jpg") 0 0;}
 a#a276:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_48.jpg") 100px 0;}
+
+a#a277{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/vse_hrenovo.jpg") 0 0;}
+a#a277:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/vse_hrenovo.jpg") 100px 0;}
+
+a#a278{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/running_man.jpg") 0 0;}
+a#a278:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/running_man.jpg") 100px 0;}
