--- a/css/style.css
+++ b/css/style.css
@@ -857,3 +857,6 @@ a#a277:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a278{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/running_man.jpg") 0 0;}
 a#a278:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/running_man.jpg") 100px 0;}
+
+a#a279{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/slavyanskie_mifi.jpg") 0 0;}
+a#a279:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/slavyanskie_mifi.jpg") 100px 0;}
