Прочитал Мифы о животных и мифических существах

--- a/css/style.css
+++ b/css/style.css
@@ -860,3 +860,6 @@ a#a278:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a279{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/slavyanskie_mifi.jpg") 0 0;}
 a#a279:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/slavyanskie_mifi.jpg") 100px 0;}
+
+a#a280{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mifi_o_zhivotnih.jpg") 0 0;}
+a#a280:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mifi_o_zhivotnih.jpg") 100px 0;}
