Прочитал Возвращение в СССР #49

--- a/css/style.css
+++ b/css/style.css
@@ -863,3 +863,6 @@ a#a279:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a280{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mifi_o_zhivotnih.jpg") 0 0;}
 a#a280:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/mifi_o_zhivotnih.jpg") 100px 0;}
+
+a#a281{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_49.jpg") 0 0;}
+a#a281:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_49.jpg") 100px 0;}
