--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ div#block {width:1000px;padding:0px;margin:0px;display:block;overflow-x:auto;}
 #toggle-recent-2023 {background:none;border:none;color:inherit;font:inherit;cursor:pointer;padding:0;}
 #toggle-recent-2024 {background:none;border:none;color:inherit;font:inherit;cursor:pointer;padding:0;}
 #toggle-recent-2025 {background:none;border:none;color:inherit;font:inherit;cursor:pointer;padding:0;}
+#toggle-recent-2026 {background:none;border:none;color:inherit;font:inherit;cursor:pointer;padding:0;}
 
 .hidden {display: none !important;}
 
