--- a/css/style.css
+++ b/css/style.css
@@ -867,3 +867,6 @@ a#a280:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a281{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_49.jpg") 0 0;}
 a#a281:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_49.jpg") 100px 0;}
+
+a#a282{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_2.jpg") 0 0;}
+a#a282:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_2.jpg") 100px 0;}
