Прочитал Рождество в Российской империи

--- a/css/style.css
+++ b/css/style.css
@@ -870,3 +870,6 @@ a#a281:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a282{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_2.jpg") 0 0;}
 a#a282:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_2.jpg") 100px 0;}
+
+a#a283{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvo_v_rossiyskoy_imperii.jpg") 0 0;}
+a#a283:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvo_v_rossiyskoy_imperii.jpg") 100px 0;}
