Прочитал Возвращение в СССР #50

--- a/css/style.css
+++ b/css/style.css
@@ -873,3 +873,6 @@ a#a282:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a283{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvo_v_rossiyskoy_imperii.jpg") 0 0;}
 a#a283:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvo_v_rossiyskoy_imperii.jpg") 100px 0;}
+
+a#a284{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_50.jpg") 0 0;}
+a#a284:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_50.jpg") 100px 0;}
