--- a/css/style.css
+++ b/css/style.css
@@ -876,3 +876,6 @@ a#a283:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a284{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_50.jpg") 0 0;}
 a#a284:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_50.jpg") 100px 0;}
+
+a#a285{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_3.jpg") 0 0;}
+a#a285:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_3.jpg") 100px 0;}
