Прочитал Под Куполом

--- a/css/style.css
+++ b/css/style.css
@@ -879,3 +879,6 @@ a#a284:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a285{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_3.jpg") 0 0;}
 a#a285:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_3.jpg") 100px 0;}
+
+a#a286{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pod_kypolom.jpg") 0 0;}
+a#a286:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pod_kypolom.jpg") 100px 0;}
