--- a/css/style.css
+++ b/css/style.css
@@ -882,3 +882,6 @@ a#a285:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a286{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pod_kypolom.jpg") 0 0;}
 a#a286:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/pod_kypolom.jpg") 100px 0;}
+
+a#a287{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_51.jpg") 0 0;}
+a#a287:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_51.jpg") 100px 0;}
