Прочитал Колдун и кристалл

--- a/css/style.css
+++ b/css/style.css
@@ -885,3 +885,6 @@ a#a286:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a287{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_51.jpg") 0 0;}
 a#a287:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_51.jpg") 100px 0;}
+
+a#a288{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.jpg") 0 0;}
+a#a288:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.jpg") 100px 0;}
