--- a/css/style.css
+++ b/css/style.css
@@ -888,3 +888,6 @@ a#a287:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a288{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.jpg") 0 0;}
 a#a288:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.jpg") 100px 0;}
+
+a#a289{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvenskie_mifi.jpg") 0 0;}
+a#a289:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvenskie_mifi.jpg") 100px 0;}
