Прочитал Ветер сквозь замочную скважину

--- a/css/style.css
+++ b/css/style.css
@@ -891,3 +891,6 @@ a#a288:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a289{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvenskie_mifi.jpg") 0 0;}
 a#a289:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/rozhdestvenskie_mifi.jpg") 100px 0;}
+
+a#a290{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.5.jpg") 0 0;}
+a#a290:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.5.jpg") 100px 0;}
