Прочитал Возвращение в СССР #52

--- a/css/style.css
+++ b/css/style.css
@@ -894,3 +894,6 @@ a#a289:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a290{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.5.jpg") 0 0;}
 a#a290:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_4.5.jpg") 100px 0;}
+
+a#a291{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_52.jpg") 0 0;}
+a#a291:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_52.jpg") 100px 0;}
