Прочитал Волки Кальи

--- a/css/style.css
+++ b/css/style.css
@@ -897,3 +897,6 @@ a#a290:hover {width:100px;height:150px;margin:0;padding:0;display:block;backgrou
 
 a#a291{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_52.jpg") 0 0;}
 a#a291:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/revizor_52.jpg") 100px 0;}
+
+a#a292{width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_5.jpg") 0 0;}
+a#a292:hover {width:100px;height:150px;margin:0;padding:0;display:block;background: url("../jpg/temnaya_bashnya_5.jpg") 100px 0;}
